--- a/src/img/app/appViews/DownloadingInfo.glade
+++ b/src/img/app/appViews/DownloadingInfo.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Feb  4 15:37:25 2010 -->
+<!--Generated with glade3 3.4.5 on Sun Feb  7 23:19:23 2010 -->
 <glade-interface>
   <widget class="GtkDialog" id="dialog">
     <property name="visible">True</property>
@@ -12,6 +12,7 @@
       <widget class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
         <property name="spacing">2</property>
+        <property name="homogeneous">True</property>
         <child>
           <widget class="GtkLabel" id="label">
             <property name="visible">True</property>
@@ -32,8 +33,14 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">OK</property>
+                <property name="relief">GTK_RELIEF_NONE</property>
                 <property name="response_id">0</property>
+                <child>
+                  <widget class="GtkImage" id="image">
+                    <property name="visible">True</property>
+                    <property name="stock">gtk-missing-image</property>
+                  </widget>
+                </child>
               </widget>
             </child>
           </widget>
