--- a/src/img/app/appViews/DownloadingInfo.glade
+++ b/src/img/app/appViews/DownloadingInfo.glade
@@ -1,45 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Feb  4 15:37:25 2010 -->
+<!--Generated with glade3 3.4.5 on Sun Feb  7 23:48:13 2010 -->
 <glade-interface>
-  <widget class="GtkDialog" id="dialog">
-    <property name="visible">True</property>
-    <property name="border_width">5</property>
-    <property name="resizable">False</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_TOOLBAR</property>
-    <child internal-child="vbox">
-      <widget class="GtkVBox" id="dialog-vbox1">
+  <widget class="GtkWindow" id="window">
+    <property name="type">GTK_WINDOW_POPUP</property>
+    <child>
+      <widget class="GtkHBox" id="hboxSure">
         <property name="visible">True</property>
-        <property name="spacing">2</property>
+        <property name="spacing">25</property>
         <child>
           <widget class="GtkLabel" id="label">
             <property name="visible">True</property>
-            <property name="label" translatable="yes">UNA VEZ DESCARGADO, TENDRAS EL CLIC EN TU LISTADO.</property>
-            <property name="ellipsize">PANGO_ELLIPSIZE_END</property>
+            <property name="label" translatable="yes">label</property>
           </widget>
-          <packing>
-            <property name="position">1</property>
-          </packing>
         </child>
-        <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area1">
+        <child>
+          <widget class="GtkButton" id="button">
             <property name="visible">True</property>
-            <property name="homogeneous">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="relief">GTK_RELIEF_NONE</property>
+            <property name="response_id">0</property>
             <child>
-              <widget class="GtkButton" id="button">
+              <widget class="GtkImage" id="image">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="label" translatable="yes">OK</property>
-                <property name="response_id">0</property>
+                <property name="stock">gtk-missing-image</property>
               </widget>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </widget>
