--- a/src/img/app/appViews/mainView.glade
+++ b/src/img/app/appViews/mainView.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Wed Feb  3 15:49:04 2010 -->
+<!--Generated with glade3 3.4.5 on Tue Feb  9 18:22:15 2010 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <child>
@@ -46,7 +46,7 @@
                           </widget>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label5">
+                          <widget class="GtkLabel" id="labelManual">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">MANUAL</property>
                           </widget>
@@ -75,7 +75,7 @@
                           </widget>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label4">
+                          <widget class="GtkLabel" id="labelAbout">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">ACERCA DE...</property>
                           </widget>
@@ -100,17 +100,12 @@
         <child>
           <widget class="GtkAlignment" id="alignment3">
             <property name="visible">True</property>
-            <property name="left_padding">200</property>
-            <property name="right_padding">200</property>
+            <property name="top_padding">20</property>
+            <property name="bottom_padding">20</property>
             <child>
-              <widget class="GtkLabel" id="label1">
+              <widget class="GtkLabel" id="labelInitText">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Lorem ipsum te vis dico aperiri perpetua, sed in modus hendrerit efficiendi. 
-Accommodare interpretaris qui no, at aeque nemore dicunt his. Fabulas 
-indoctum erroribus ei mea, accusam gloriatur qui at, ei vel posse soleat 
-legimus. Solum dicant putant te sed, nobis iuvaret oporteat no pri. Ut sumo 
-impedit vis, quis voluptatibus an has, ex brute hendrerit mea. Ei diam honestatis 
-delicatissimi nam, per no nulla iuvaret expetenda.</property>
+                <property name="label" translatable="yes">initial text</property>
               </widget>
             </child>
           </widget>
@@ -148,7 +143,7 @@ delicatissimi nam, per no nulla iuvaret expetenda.</property>
                           </widget>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label2">
+                          <widget class="GtkLabel" id="labelSearch">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">DESCARGAR CLICS</property>
                           </widget>
@@ -177,7 +172,7 @@ delicatissimi nam, per no nulla iuvaret expetenda.</property>
                           </widget>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label3">
+                          <widget class="GtkLabel" id="labelMyClics">
                             <property name="visible">True</property>
                             <property name="label" translatable="yes">MIS CLICS</property>
                           </widget>
